# learn-rust-graphql

./: Cargo.toml
src/: main.rs
test_data/: contacts.csv
