[package]
name = "backend"
version = "0.1.0"
authors = ["andrew webber (personal) <andrewvwebber@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.56"
async-graphql = "1.11.0"
async-graphql-actix-web = "1.3.0" 
actix-web = "2.0"
actix-rt = "1.0"
tokio = { version = "0.2", features = ["full"] }
